error handling for sign-up.js

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,8 @@ extends layout.pug
 
 block content
   h1 Hello World!
-    div(id="tweets-container")
-  
+    div(id="tasks-container")
+  a(class="btn btn-primary" href="/create") Create Task
+
   script(src="js/index.js")
     
